// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KryptosKit (OKP) > env > export 1`] = `"kryptos:rAABAQICeCRmZjJhNDQ4ZS04ZWIwLTU5YTgtOGZjNi0wY2UyM2FkMDdlOGYDFAQBBQQKGpSZswALGmWScQAMGmWScQAQ9BgeWCAZELAIDqUKGiwUYxDDEaIcJ3NuV-8LPQU2JG1OebWqpxggWCAcCiZb6IdZ4HfS0Xe3bbxjkqluLmWpnbyLtAAQ9gJMSw"`;

exports[`KryptosKit (OKP) > env > export 2`] = `"kryptos:eyJjcnYiOiJFZDI1NTE5IiwieCI6IkdSQ3dDQTZsQ2hvc0ZHTVF3eEdpSENkemJsZnZDejBGTmlSdFRubTFxcWMiLCJkIjoiSEFvbVctaUhXZUIzMHRGM3QyMjhZNUtwYmk1bHFaMjhpN1FBRVBZQ1RFcyIsImtpZCI6ImZmMmE0NDhlLThlYjAtNTlhOC04ZmM2LTBjZTIzYWQwN2U4ZiIsImFsZyI6IkVkRFNBIiwidXNlIjoic2lnIiwia3R5IjoiT0tQIiwiZXhwIjoyNDkzMTAwODAwLCJpYXQiOjE3MDQwOTYwMDAsIm5iZiI6MTcwNDA5NjAwMCwicHVibGlzaCI6ZmFsc2V9"`;

exports[`KryptosKit (OKP) > from > auto > b64 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "EdDSA",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "encryption": null,
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "ff2a448e-8eb0-59a8-8fc6-0ce23ad07e8f",
  "internal": true,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "publish": false,
  "purpose": null,
  "thumbprint": "XcTD1o2JXbVRJkHHqVflMHIZF-62rlFVMCkDEKF8vik",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > auto > b64 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "exp": 2493100800,
  "iat": 1704096000,
  "kid": "ff2a448e-8eb0-59a8-8fc6-0ce23ad07e8f",
  "kty": "OKP",
  "nbf": 1704096000,
  "use": "sig",
  "x": "GRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
}
`;

exports[`KryptosKit (OKP) > from > auto > b64 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "id": "ff2a448e-8eb0-59a8-8fc6-0ce23ad07e8f",
  "privateKey": "MC4CAQAwBQYDK2VwBCIEIBwKJlvoh1ngd9LRd7dtvGOSqW4uZamdvIu0ABD2AkxL",
  "publicKey": "MCowBQYDK2VwAyEAGRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > auto > jwk 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "EdDSA",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "encryption": null,
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6fc93fb6-d40e-52dc-9606-adaa80fef0c7",
  "internal": false,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "publish": true,
  "purpose": null,
  "thumbprint": "6D5q7WxG0Uu9x15ivUcbgt5GUfYJYKivRrRaI5hxmvo",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > auto > jwk 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "exp": 2493100800,
  "iat": 1704096000,
  "kid": "6fc93fb6-d40e-52dc-9606-adaa80fef0c7",
  "kty": "OKP",
  "nbf": 1704096000,
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) > from > auto > jwk 3`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "d": "CDqMp2HAyaLiV8Xdt8ouEnhYbZtRXlFAsEkccUCcpQk",
  "kid": "6fc93fb6-d40e-52dc-9606-adaa80fef0c7",
  "kty": "OKP",
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) > from > auto > pem 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "EdDSA",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "encryption": null,
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "3ee7c51b-e879-554e-ae49-e6330610f09e",
  "internal": true,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "publish": false,
  "purpose": null,
  "thumbprint": "XaBxVWxsIhi8U9IS9X9a-LOXXRzUrvF1HhhumSpfDjs",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > auto > pem 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "exp": 2493100800,
  "iat": 1704096000,
  "kid": "3ee7c51b-e879-554e-ae49-e6330610f09e",
  "kty": "OKP",
  "nbf": 1704096000,
  "use": "sig",
  "x": "FqCTfRe3gmMUYSmAmAl8id-ZYSsmFpKHXmh-ZOaPOfM",
}
`;

exports[`KryptosKit (OKP) > from > auto > pem 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "id": "3ee7c51b-e879-554e-ae49-e6330610f09e",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MC4CAQAwBQYDK2VwBCIEIA5gn8ikyFzW8+jNHtl4CvQvLSC2xXJVKTqsdY49bwma
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MCowBQYDK2VwAyEAFqCTfRe3gmMUYSmAmAl8id+ZYSsmFpKHXmh+ZOaPOfM=
-----END PUBLIC KEY-----
",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > b64 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "EdDSA",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "encryption": null,
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "ff2a448e-8eb0-59a8-8fc6-0ce23ad07e8f",
  "internal": true,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "publish": false,
  "purpose": null,
  "thumbprint": "XcTD1o2JXbVRJkHHqVflMHIZF-62rlFVMCkDEKF8vik",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > b64 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "exp": 2493100800,
  "iat": 1704096000,
  "kid": "ff2a448e-8eb0-59a8-8fc6-0ce23ad07e8f",
  "kty": "OKP",
  "nbf": 1704096000,
  "use": "sig",
  "x": "GRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
}
`;

exports[`KryptosKit (OKP) > from > b64 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "id": "ff2a448e-8eb0-59a8-8fc6-0ce23ad07e8f",
  "privateKey": "MC4CAQAwBQYDK2VwBCIEIBwKJlvoh1ngd9LRd7dtvGOSqW4uZamdvIu0ABD2AkxL",
  "publicKey": "MCowBQYDK2VwAyEAGRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > jwk 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "EdDSA",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "encryption": null,
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6fc93fb6-d40e-52dc-9606-adaa80fef0c7",
  "internal": false,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "publish": true,
  "purpose": null,
  "thumbprint": "6D5q7WxG0Uu9x15ivUcbgt5GUfYJYKivRrRaI5hxmvo",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > jwk 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "exp": 2493100800,
  "iat": 1704096000,
  "kid": "6fc93fb6-d40e-52dc-9606-adaa80fef0c7",
  "kty": "OKP",
  "nbf": 1704096000,
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) > from > jwk 3`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "d": "CDqMp2HAyaLiV8Xdt8ouEnhYbZtRXlFAsEkccUCcpQk",
  "kid": "6fc93fb6-d40e-52dc-9606-adaa80fef0c7",
  "kty": "OKP",
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) > from > pem 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "EdDSA",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "encryption": null,
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "3ee7c51b-e879-554e-ae49-e6330610f09e",
  "internal": true,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "publish": false,
  "purpose": null,
  "thumbprint": "XaBxVWxsIhi8U9IS9X9a-LOXXRzUrvF1HhhumSpfDjs",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > from > pem 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "exp": 2493100800,
  "iat": 1704096000,
  "kid": "3ee7c51b-e879-554e-ae49-e6330610f09e",
  "kty": "OKP",
  "nbf": 1704096000,
  "use": "sig",
  "x": "FqCTfRe3gmMUYSmAmAl8id-ZYSsmFpKHXmh-ZOaPOfM",
}
`;

exports[`KryptosKit (OKP) > from > pem 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "id": "3ee7c51b-e879-554e-ae49-e6330610f09e",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MC4CAQAwBQYDK2VwBCIEIA5gn8ikyFzW8+jNHtl4CvQvLSC2xXJVKTqsdY49bwma
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MCowBQYDK2VwAyEAFqCTfRe3gmMUYSmAmAl8id+ZYSsmFpKHXmh+ZOaPOfM=
-----END PUBLIC KEY-----
",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) > generate > auto 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "ECDH-ES+A128GCMKW",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "X25519",
  "encryption": "A256GCM",
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": Any<String>,
  "internal": true,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "deriveKey",
    "deriveBits",
  ],
  "ownerId": null,
  "publish": false,
  "purpose": null,
  "thumbprint": Any<String>,
  "type": "OKP",
  "use": "enc",
}
`;

exports[`KryptosKit (OKP) > generate > enc 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "ECDH-ES",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "X25519",
  "encryption": "A256GCM",
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": Any<String>,
  "internal": true,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "deriveKey",
    "deriveBits",
  ],
  "ownerId": null,
  "publish": false,
  "purpose": null,
  "thumbprint": Any<String>,
  "type": "OKP",
  "use": "enc",
}
`;

exports[`KryptosKit (OKP) > generate > sig 1`] = `
{
  "algClass": "asymmetric",
  "algorithm": "EdDSA",
  "certificateChain": [],
  "certificateThumbprint": null,
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "encryption": null,
  "expiresAt": 2049-01-01T08:00:00.000Z,
  "expiresIn": 789004800,
  "hasCertificate": false,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": Any<String>,
  "internal": true,
  "isActive": true,
  "isExpired": false,
  "issuer": null,
  "jwksUri": null,
  "modulus": null,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": null,
  "publish": false,
  "purpose": null,
  "thumbprint": Any<String>,
  "type": "OKP",
  "use": "sig",
}
`;
